--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "ultracite": "5.6.1"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/swagger": "^9.5.2",
     "@prisma/client": "^6.17.0",
     "@scalar/fastify-api-reference": "^1.37.0",
+    "argon2": "^0.44.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "fastify-type-provider-zod": "^6.0.0",
