--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch -r tsconfig-paths/register src/server.ts",
+    "prisma:generate": "rimraf node_modules/.prisma && cross-env PRISMA_CLIENT_ENGINE_TYPE=binary prisma generate",
+    "build": "tsc -p tsconfig.json && tsc-alias",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +16,10 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
     "@types/node": "^24.7.0",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
+    "rimraf": "^6.0.1",
+    "cross-env": "^7.0.3",
     "prisma": "^6.17.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
