--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,6 +7,9 @@
     "rules": {
       "suspicious": {
         "useAwait": "off"
+      },
+      "style": {
+        "noMagicNumbers": "off"
       }
     }
   },
