--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch -r tsconfig-paths/register src/server.ts",
     "prisma:generate": "rimraf node_modules/.prisma && cross-env PRISMA_CLIENT_ENGINE_TYPE=binary prisma generate",
     "build": "tsc -p tsconfig.json && tsc-alias",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,10 @@
     "prisma": "^6.17.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "ultracite": "5.6.1"
+    "ultracite": "5.6.1",
+    "@vitest/coverage-v8": "^2.1.4",
+    "vitest": "^2.1.4",
+    "vitest-mock-extended": "^1.3.2"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
