--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,10 @@ services:
     build: .
     image: mateusumelo/c317-whisper-api-audio-transcription-api
     ports:
-      - "8000:8000"
+      - "8000:3000"
     environment:
       - API_HOST=0.0.0.0
-      - API_PORT=8000
+      - API_PORT=3000
       - API_RELOAD=false
       - WHISPER_MODEL_SIZE=base
       - WHISPER_DEVICE=cpu
@@ -32,14 +32,14 @@ services:
       - MAX_AUDIO_SIZE_MB=25
       - MODEL_CACHE_DIR=/app/models
       - TEMP_UPLOAD_DIR=/tmp
+      - DATABASE_URL=postgresql://postgres:postgres@database:5432/fono?schema=public
     volumes:
       - ./data/temp_uploads:/tmp
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-s", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
-    restart: unless-stopped
 
   app:
     build: .
@@ -53,7 +53,7 @@ services:
       - PORT=3000
       - DATABASE_URL=postgresql://postgres:postgres@database:5432/fono?schema=public
       - SECRET_KEY=super_secret_key_troque_isso_aqui
-      - TRANSCRIPTION_API_URL=http://audio-transcription-api:8000/api/v1/transcribe/file
+      - TRANSCRIPTION_API_URL=http://audio-transcription-api:3000/api/v1/transcribe/file
       - TEST_AUDIO_PATH=assets/audios
       - DEFAULT_AUDIO_FILE=teste.ogg
       - EXPECTED_TRANSCRIPTION=Teste de transcrição
